--- a/src/main/resources/static/Pages/turmas.html
+++ b/src/main/resources/static/Pages/turmas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neos Education Cadastro Professor</title>
+    <title>Neos Education Cadastro Turmas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -38,10 +38,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link " href="Aluno.html">Alunos</a></li>
-                    <li class="nav-item"><a class="nav-link select" href="Professor.html">Professores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Aluno.html">Alunos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Professor.html">Professores</a></li>
                     <li class="nav-item"><a class="nav-link" href="Disciplina.html">Disciplinas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="turmas.html">Turmas</a></li>
+                    <li class="nav-item"><a class="nav-link select" href="turmas.html">Turmas</a></li>
                 </ul>
             </div>
         </div>
@@ -52,33 +52,27 @@
         <p class="text-center">Utilize o menu acima para navegar entre os módulos de cadastro.</p>
     </div>
     
-    <div class="container mt-4" id="formularioProfessor" style="display: block;">
+    <div class="container mt-4" id="formularioTurma" style="display: block;">
         <div class="card p-4">
-            <h3>Cadastro de Professores</h3>
+            <h3>Cadastro de Turmas</h3>
             <form>
                 <div class="Warn mb-3">
-                    <label for="nome" class="form-label">Nome Completo</label>
-                    <input type="text" class="form-control" id="nome" required>
+                    <label for="nome" class="form-label">Código da Turma</label>
+                    <input type="text" class="form-control" id="turma" required>
                 </div>
                 <div class="Warn mb-3">
-                    <label for="dataNascimento" class="form-label">Data de Nascimento</label>
-                    <input type="date" class="form-control" id="dataNascimento" required>
+                    <label for="nome" class="form-label">Diciplina</label>
+                    <input type="text" class="form-control" id="diciplina" required>
+                </div>
+                <div class="mb-3">
+                    <label for="professor" class="form-label">Professor Responsável</label>
+                    <select class="form-control" id="professor" required>
+                        <option value="">Selecione um professor</option>
+                    </select>
                 </div>
                 <div class="Warn mb-3">
-                    <label for="cpf" class="form-label">CPF</label>
-                    <input type="text" class="form-control" id="cpf" required>
-                </div>
-                <div class="Warn mb-3">
-                    <label for="endereco" class="form-label">Endereço</label>
-                    <input type="text" class="form-control" id="endereco" required>
-                </div>
-                <div class="Warn mb-3">
-                    <label for="telefone" class="form-label">Telefone</label>
-                    <input type="tel" class="form-control" id="telefone" required>
-                </div>
-                <div class="Warn mb-3">
-                    <label for="email" class="form-label">E-mail</label>
-                    <input type="email" class="form-control" id="email" required>
+                    <label for="dataNascimento" class="form-label">Horario</label>
+                    <input type="text" class="form-control" id="horario" required>
                 </div>
                 <div class="mb-3">
                     <label for="professor" class="form-label">Disciplina</label>
@@ -88,6 +82,7 @@
                 </div>
                 <button type="submit" id="button" class="btn btn-custom">Cadastrar</button>
                 <button type="reset" class="btn btn-secondary ms-2">Limpar</button>
+                
             </form>
         </div>
     </div>
