--- a/src/main/resources/static/Pages/Disciplina.html
+++ b/src/main/resources/static/Pages/Disciplina.html
@@ -81,7 +81,7 @@
             </form>
         </div>
     </div>
-    <script src="../server.js"></script>
+    <script src="../assets/disciplina.js"></script>
     <script src="../assets/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
