--- a/src/main/resources/static/Pages/turmas.html
+++ b/src/main/resources/static/Pages/turmas.html
@@ -58,11 +58,7 @@
             <form>
                 <div class="Warn mb-3">
                     <label for="nome" class="form-label">Código da Turma</label>
-                    <input type="text" class="form-control" id="turma" required>
-                </div>
-                <div class="Warn mb-3">
-                    <label for="nome" class="form-label">Diciplina</label>
-                    <input type="text" class="form-control" id="diciplina" required>
+                    <input type="text" class="form-control" id="codigo" required>
                 </div>
                 <div class="mb-3">
                     <label for="professor" class="form-label">Professor Responsável</label>
@@ -71,11 +67,24 @@
                     </select>
                 </div>
                 <div class="Warn mb-3">
-                    <label for="dataNascimento" class="form-label">Horario</label>
-                    <input type="text" class="form-control" id="horario" required>
+                    <label for="ano" class="form-label">Periodo</label>
+                    <input type="text" class="form-control" id="periodo" required>
                 </div>
-                <div class="mb-3">
-                    <label for="professor" class="form-label">Disciplina</label>
+                <div class="Warn mb-3">
+                    <label for="ano" class="form-label">Ano Letivo</label>
+                    <input type="text" class="form-control" id="anoLetivo" required>
+                </div>
+                <div class="Warn mb-3">
+                    <label for="turma" class="form-label">Turno</label>
+                    <select class="form-control" id="turno" required>
+                        <option value="">Selecione um turno</option>
+                        <option value="Manhã">Manhã</option>
+                        <option value="Tarde">Tarde</option>
+                        <option value="Noite">Noite</option>
+                    </select>
+                </div>
+                <div class="Warn mb-3">
+                    <label for="disciplina" class="form-label">Disciplina</label>
                     <select class="form-control" id="disciplina" required>
                         <option value="">Selecione uma Disciplinas</option>
                     </select>
@@ -86,7 +95,7 @@
             </form>
         </div>
     </div>
-    <script src="../server.js"></script>
+    <script src="../assets/turma.js"></script>
     <script src="../assets/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
