--- a/src/main/resources/static/Pages/Alunos.html
+++ b/src/main/resources/static/Pages/Alunos.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container_nav">
-            <a class="navbar-brand" href="/index.html">Neos Education</a>
+            <a class="navbar-brand" href="../Pages/index.html">Neos Education</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="menu-toggle">☰</span>
             </button>
@@ -30,6 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="Professor.html">Professores</a></li>
                     <li class="nav-item"><a class="nav-link" href="Disciplina.html">Disciplinas</a></li>
                     <li class="nav-item"><a class="nav-link" href="turmas.html">Turmas</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="Vizualizar.html">Classroom</a></li>
                 </ul>
             </div>
         </div>
@@ -75,32 +76,11 @@
                 <div class="invalid-feedback">Por favor, insira um endereço válido.</div>
             </div>
             
-            <div class="col-md-6">
-                <label for="matricula" class="form-label">Número de Matrícula</label>
-                <input type="text" class="form-control" id="matricula" readonly>
-            </div>
-            
             <div class="col-12 text-center">
                 <button class="btn btn-primary" type="submit">Cadastrar</button>
             </div>
         </form>
  </div>
-    <script>
-        (function () {
-            'use strict'
-            var forms = document.querySelectorAll('.needs-validation')
-            Array.prototype.slice.call(forms)
-                .forEach(function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (!form.checkValidity()) {
-                            event.preventDefault()
-                            event.stopPropagation()
-                        }
-                        form.classList.add('was-validated')
-                    }, false)
-                })
-        })()
-    </script>
     <script src="../assets/aluno.js"></script>
     <script src="../assets/script.js"></script>
 </body>
