--- a/src/main/resources/static/Pages/Professor.html
+++ b/src/main/resources/static/Pages/Professor.html
@@ -12,7 +12,7 @@
 <body onload="carregarDisciplinas()">  
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container_nav">
-            <a class="navbar-brand" href="/index.html">Neos Education</a>
+            <a class="navbar-brand" href="../Pages/index.html">Neos Education</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="menu-toggle">☰</span>
             </button>
@@ -22,6 +22,7 @@
                     <li class="nav-item"><a class="nav-link" href="Professor.html">Professores</a></li>
                     <li class="nav-item"><a class="nav-link" href="Disciplina.html">Disciplinas</a></li>
                     <li class="nav-item"><a class="nav-link" href="turmas.html">Turmas</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="../Pages/Vizualizar.html">Classroom</a></li>
                 </ul>
             </div>
         </div>
