--- a/src/main/resources/static/Pages/Vizualizar.html
+++ b/src/main/resources/static/Pages/Vizualizar.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container_nav">
-            <a class="navbar-brand" href="/index.html">Neos Education</a>
+            <a class="navbar-brand" href="../Pages/index.html">Neos Education</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="menu-toggle">☰</span>
             </button>
@@ -20,15 +20,11 @@
                     <li class="nav-item"><a class="nav-link" href="Professor.html">Professores</a></li>
                     <li class="nav-item"><a class="nav-link" href="Disciplina.html">Disciplinas</a></li>
                     <li class="nav-item"><a class="nav-link active" href="turmas.html">Turmas</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="Vizualizar.html">Classroom</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-
-    <div class="progress" style="height: 5px;">
-        <div id="loader" class="progress-bar progress-bar-striped progress-bar-animated" 
-             role="progressbar" style="width: 100%"></div>
-    </div>
 
     <div class="container mt-5">
         <h2 class="text-center">Visualizar Turmas</h2>
