--- a/src/main/resources/static/Pages/Disciplina.html
+++ b/src/main/resources/static/Pages/Disciplina.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container_nav">
-            <a class="navbar-brand" href="/index.html">Neos Education</a>
+            <a class="navbar-brand" href="../Pages/index.html">Neos Education</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="menu-toggle">☰</span>
             </button>
